# docs/swagger.json
@@ -13,53 +13,6 @@
     "host": "localhost:8000",
     "basePath": "/api/v1",
     "paths": {
-        "/account/": {
-            "put": {
-                "description": "create default account with user id from body",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "account"
-                ],
-                "summary": "Create account by user id",
-                "operationId": "create-account",
-                "parameters": [
-                    {
-                        "description": "account update info",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.UpdateAccountRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/handler.Response"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/handler.errorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/handler.errorResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/account/:id": {
             "get": {
                 "description": "get account info by user id",
@@ -104,8 +57,8 @@
                     }
                 }
             },
-            "post": {
-                "description": "update account info with data from body",
+            "put": {
+                "description": "update user account data",
                 "consumes": [
                     "application/json"
                 ],
@@ -115,15 +68,17 @@
                 "tags": [
                     "account"
                 ],
-                "summary": "Update account info",
+                "summary": "Update account by user id",
                 "operationId": "update-account",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "User ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
+                        "description": "account update info",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.UpdateAccountRequest"
+                        }
                     }
                 ],
                 "responses": {
